<resources>
	<string name="lang"></string>
    <string name="Stratuvare">&quot;Stratuvare&quot;</string>
    <string name="title_activity_main">&quot;Avare&quot;</string>
    <string name="MissingMaps">&quot;Download chart&quot;</string>
    <string name="MissingElevation">&quot;Download elevation chart&quot;</string>
    <string name="LoadingMaps">&quot;Loading Charts&quot;</string>
    <string name="OK">&quot;OK&quot;</string>
    <string name="Nearest">&quot;Nearest&quot;</string>
    <string name="Success">&quot;Success&quot;</string>
    <string name="WarningMsg">&quot;USE AT YOUR OWN RISK!&quot;</string>
    <string name="DestinationPrompt">&quot;Enter Destination Code&quot;</string>
    <string name="DestinationNF">&quot;Destination Not Found&quot;</string>
    <string name="AirDia">&quot;Airport Diagram&quot;</string>
    <string name="ADS">&quot;Airport Diagrams&quot;</string>
    <string name="InstallPDF">&quot;To see the diagram, go to Google Play Store, and install a PDF viewer&quot;</string>
    <string name="Cancel">&quot;Cancel&quot;</string>
    <string name="To">&quot;To&quot;</string>
    <string name="Maps">&quot;Maps&quot;</string>
    <string name="MapsLabel">&quot;Charts Storage Folder&quot;</string>
    <string name="MapsSummary">&quot;Location where charts are stored&quot;</string>
    <string name="OrientationP">&quot;OrientationP&quot;</string>
    <string name="OrientationPLabel">&quot;Screen Orientation&quot;</string>
    <string name="OrientationPSummary">&quot;Select a screen orientation&quot;</string>
    <string name="GpsTime">&quot;GpsTime&quot;</string>
    <string name="GpsTimeLabel">&quot;Short GPS Update Period&quot;</string>
    <string name="GpsTimeSummary">&quot;Select for shorter GPS update period&quot;</string>
    <string name="GpsOffWarn">&quot;GpsOffWarn&quot;</string>
    <string name="GpsOffWarnLabel">&quot;Warn GPS Disabled&quot;</string>
    <string name="GpsOffWarnSummary">&quot;Select to warn frequently when GPS is disabled&quot;</string>
    <string name="ShowTrack">&quot;ShowTrack&quot;</string>
    <string name="ShowTrackLabel">&quot;Destination Course Line&quot;</string>
    <string name="ShowTrackSummary">&quot;Select to show course to destination&quot;</string>
    <string name="Help">&quot;Help&quot;</string>
    <string name="desc">&quot;Image/Chart&quot;</string>
    <string name="Destination">&quot;Destination&quot;</string>
    <string name="Settings">&quot;Preferences&quot;</string>
    <string name="Downloads">&quot;Downloads&quot;</string>
    <string name="Downloading">&quot;Downloading&quot;</string>
    <string name="download">&quot;Download&quot;</string>
    <string name="Failed">&quot;Failed&quot;</string>
    <string name="Extracting">&quot;Extracting&quot;</string>
    <string name="Yes">&quot;Yes&quot;</string>
    <string name="No">&quot;No&quot;</string>
    <string name="GPSLost">&quot;No GPS Signal&quot;</string>
    <string name="GPSEnable">&quot;Turn On GPS&quot;</string>
    <string name="Init">&quot;Initializing&quot;</string>
    <string name="Recent">&quot;Recent&quot;</string>
   	<string name="ChartType">&quot;Chart Type&quot;</string>
	<string name="ChartTypeLabel">&quot;Select Chart Type&quot;</string>
	<string name="ChartTypeSummary">&quot;Select a chart type for navigation&quot;</string>
    <string name="weather">&quot;Weather&quot;</string>
    <string name="TFRReceived">&quot;TFR Received&quot;</string>
    <string name="databases">&quot;Databases (Required)&quot;</string>
    <string name="ValidDest">&quot;Enter a valid destination first&quot;</string>
    <string name="AreaNF">&quot;Nearest airports shown when GPS locked, and not in simulation&quot;</string>
    <string name="KeepScreenOn">&quot;Screen Timeout&quot;</string>
    <string name="KeepScreenOnLabel">&quot;Keep Screen On&quot;</string>
    <string name="KeepScreenOnSummary">&quot;Select to keep screen on while application is running&quot;</string>
    <string name="HideTabBar">&quot;Hide Tab Bar&quot;</string>
    <string name="HideTabBarLabel">&quot;Hide Tab Bar&quot;</string>
    <string name="HideTabBarSummary">&quot;Select to hide the bottom tab bar.&quot;</string>
    <string name="HideToolbar">&quot;Hide Toolbar&quot;</string>
    <string name="HideToolbarLabel">&quot;Hide Toolbar&quot;</string>
    <string name="HideToolbarSummary">&quot;Select to hide the top toolbar.&quot;</string>
    <string name="HideDrawButton">&quot;Hide Draw Button&quot;</string>
    <string name="HideDrawButtonLabel">&quot;Hide Draw Button&quot;</string>
    <string name="HideDrawButtonSummary">&quot;Select to hide the draw button.&quot;</string>
    <string name="update">&quot;Update&quot;</string>
    <string name="GPS">&quot;GPS&quot;</string>
    <string name="longitude">&quot;'W&quot;</string>
    <string name="latitude">&quot;'N&quot;</string>
    <string name="accuracy">&quot;Accuracy ft.&quot;</string>
    <string name="degree">&quot;\u00B0&quot;</string>
    <string name="calibratethis">&quot;Geo Tag this point&quot;</string>
    <string name="Done">&quot;Done&quot;</string>
    <string name="Calibrate">&quot;GeoTag&quot;</string>
    <string name="PointsTooClose">&quot;Points too close to each other&quot;</string>
    <string name="BadCoords">&quot;Unacceptable Longitude/Latitude input\nLongitude Range: 0 to 180 W\nLatitude Range 0 to 90 N&quot;</string>
    <string name="GoodCoords">&quot;Plate marked and saved&quot;</string>
    <string name="Main">&quot;Map&quot;</string>
    <string name="Plates">&quot;Plate&quot;</string>
    <string name="AFD">&quot;A/FD&quot;</string>
    <string name="ThreeD">&quot;3D&quot;</string>
    <string name="Lon">&quot;Lon&quot;</string>
    <string name="Lat">&quot;Lat&quot;</string>
    <string name="DestinationSet">&quot;Destination set to &quot;</string>
    <string name="DownloadInst">&quot;Touch to select an item, then press Get to download it&quot;</string>
    <string name="Searching">&quot;Searching for&quot;</string>
    <string name="Search">&quot;Search&quot;</string>
    <string name="Get">&quot;Get&quot;</string>
    <string name="Units">&quot;Distance Unit&quot;</string>
    <string name="UnitsLabel">&quot;Distance Unit&quot;</string>
    <string name="UnitsSummary">&quot;Select distance unit&quot;</string>
    <string name="AllFacilities">&quot;All Facilities&quot;</string>
    <string name="AllFacilitiesLabel">&quot;Show All Bases&quot;</string>
    <string name="AllFacilitiesSummary">&quot;Select to show heliport, ultralight, and sea plane bases in Nearest and Search&quot;</string>
    <string name="Set">&quot;Set&quot;</string>
    <string name="Runways">&quot;Runway Extensions&quot;</string>
    <string name="RunwaysLabel">&quot;Runway Extensions&quot;</string>
    <string name="RunwaysSummary">&quot;Select to show runway extensions&quot;</string>
    <string name="AutoShowAirportDiagram">&quot;Auto Show Airport Diagram&quot;</string>
    <string name="AutoShowAirportDiagramLabel">&quot;Auto Show Airport Diagram&quot;</string>
    <string name="AutoShowAirportDiagramSummary">&quot;Select to automatically show airport diagrams on rollout&quot;</string>
    <string name="Altitude">&quot;Altitude ft.&quot;</string>
    <string name="Exit">&quot;Exit&quot;</string>
    <string name="PlatesNF">&quot;No plates available for this destination&quot;</string>
    <string name="Background">&quot;Background&quot;</string>
    <string name="BackgroundLabel">&quot;Show Background&quot;</string>
    <string name="BackgroundSummary">&quot;Select to use a color background on text, to improve readability on smaller screens&quot;</string>
    <string name="SelectPlate">&quot;Select A Plate&quot;</string>
    <string name="DownloadDB">&quot;The required data file is missing and must be downloaded.&quot;</string>
    <string name="Agree">&quot;I Agree&quot;</string>
    <string name="LeaveRunning">&quot;Leave Running&quot;</string>
    <string name="LeaveRunningLabel">&quot;Leave Running&quot;</string>
    <string name="LeaveRunningSummary">&quot;Select to pause the application on Exit (instead of a complete exit)&quot;</string>
    <string name="TFRs">&quot;TFRs&quot;</string>
    <string name="NightMode">&quot;Night Mode&quot;</string>
    <string name="NightModeLabel">&quot;Night Mode&quot;</string>
    <string name="NightModeSummary">&quot;Select to reduce white light during night operation (requires restart)&quot;</string>
    <string name="TFRShading">&quot;TFR Shading&quot;</string>
    <string name="TFRShadingLabel">&quot;TFR Shading&quot;</string>
    <string name="TFRShadingSummary">&quot;Select to enable TFR shading (may significantly impact performance)&quot;</string>
    <string name="Delete">&quot;Delete&quot;</string>
    <string name="Label">&quot;Label&quot;</string>
    <string name="Create">&quot;Create&quot;</string>
    <string name="Plan">&quot;Plan&quot;</string>
    <string name="PlusPlan">&quot;+Plan&quot;</string>
    <string name="PlanSet">&quot; added to the plan&quot;</string>
    <string name="PlanNoset">&quot; not added to the plan&quot;</string>
    <string name="PlanPrompt">&quot;Enter waypoints of plan e.g. KLAX KSBA GVO&quot;</string>
    <string name="StoredPlans">&quot;Stored Plans&quot;</string>
    <string name="GpsOnly">&quot;Only GPS destinations can be labeled&quot;</string>
    <string name="Root">&quot;Root&quot;</string>
    <string name="RootLabel">&quot;Charts Download Server&quot;</string>
    <string name="RootSummary">&quot;Select a server from which to download charts/data&quot;</string>
    <string name="Inactive">&quot;Inactive&quot;</string>
    <string name="Active">&quot;Active&quot;</string>
    <string name="Total">&quot;Total&quot;</string>
    <string name="Near">&quot;Near&quot;</string>
    <string name="Find">&quot;Find&quot;</string>
    <string name="IconHelicopter">&quot;Helicopter Icon&quot;</string>
    <string name="IconHelicopterLabel">&quot;Helicopter Icon&quot;</string>
    <string name="IconHelicopterSummary">&quot;Select to make the location icon a helicopter&quot;</string>
    <string name="Stratux">&quot;Stratux&quot;</string>
    <string name="prefDistanceRingType">DistanceRingType</string>
    <string name="DistanceRingTypeLabel">&quot;Distance Ring Style&quot;</string>
    <string name="DistanceRingTypeSummary">&quot;Select the style of distance rings to display&quot;</string>
    <string name="prefDistanceRingColors">DistanceRingColors</string>
    <string name="DistanceRingColorsLabel">&quot;Distance Ring Colors&quot;</string>
    <string name="DistanceRingColorsSummary">&quot;Select the color of distance rings&quot;</string>
    <string name="ADSBWeather">ADSBWeather</string>
    <string name="ADSBWeatherLabel">&quot;Use ADSB Weather&quot;</string>
    <string name="ADSBWeatherSummary">&quot;Select to use the weather from an ADSB receiver (requires the Avare External IO module app.), otherwise use the Internet weather&quot;</string>
    <string name="ShowLabelMETARS">&quot;Use Label for METARs&quot;</string>
    <string name="ShowLabelMETARSSummary">&quot;Select to choose between circles or labeled METAR indicators&quot;</string>
    <string name="ShowWindBarbs">&quot;Show Wind Barbs on METARs&quot;</string>
    <string name="ShowWindBarbsSummary">&quot;Choose to select the display of wind barbs on ADS-B METARs&quot;</string>
    <string name="NearestMETARRadius">&quot;NearestMETARRadius&quot;</string>
    <string name="NearestMETARRadiusLabel">&quot;Nearest METAR Search Radius&quot;</string>
    <string name="NearestMETARRadiusSummary">&quot;Select the distance to the nearest METAR station reported when METAR is unavailable on a field.&quot;</string>
    <string name="WindsAloftCeiling">&quot;Winds/Temp. Aloft Filter&quot;</string>
    <string name="WindsAloftCeilingSummary">&quot;Select Winds/Temperature Aloft upper limit altitude (thousands of feet)&quot;</string>
</resources>